--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,45 @@
 body {
   background-color: #66cccc;
 }
+
+nav{
+  background-color: #a4dba3;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  height: 60px;
+  z-index: 10;
+}
+
+.navigation-bar a{
+  font-size: 30px;
+  padding: 10px;
+  font-weight: 700;
+  text-shadow: none;
+}
+
+.navigation-bar a{
+  display: inline-block;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: transform;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+}
+.navigation-bar a:hover{
+  -webkit-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+}
+.navigation-bar a:link{
+  text-decoration: none;
+  }
+
+.navigation-bar a:hover,
+.navigation-bar a:focus{
+  color: #ee8e85;
+  outline: none;
+}
