--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,7 +49,8 @@ nav{
 }
 
 .screenshot {
-  height: 200px;
+  /*height: 200px;*/
+  width: 100%;
 }
 
 .contact-icons {
@@ -72,6 +73,7 @@ nav{
   padding: 20px;
   margin: 20px;
   height: 300px;
-  background-color: white;
+  background-color: #f2f2f2;
+  border: #66cccc 1px solid;
 }
 
