--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,26 +2,31 @@ body {
   background-color: #f2f2f2;
 }
 
+.container {
+  padding-top: 50px;
+}
+
 nav{
   background-color: #66cccc;
   text-align: center;
   position: fixed;
   width: 100%;
-  height: 60px;
+  height: 50px;
   z-index: 10;
 }
 
 .navigation-bar a{
-  font-size: 30px;
+  font-size: 20px;
   padding: 10px;
-  font-weight: 700;
+  font-weight: 500;
   text-shadow: none;
+  float: right;
 }
 
 .navigation-bar a{
   display: inline-block;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
   -webkit-transition-property: -webkit-transform;
   transition-property: transform;
   -webkit-transform: translateZ(0);
@@ -30,9 +35,9 @@ nav{
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
 .navigation-bar a:hover{
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+  -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  transform: scale(1.05);
 }
 .navigation-bar a:link{
   text-decoration: none;
@@ -40,7 +45,7 @@ nav{
 
 .navigation-bar a:hover,
 .navigation-bar a:focus{
-  color: #ee8e85;
+  color: #ee8e85; 
   outline: none;
 }
 
@@ -71,10 +76,8 @@ nav{
 
 .project{
   padding: 20px;
-  margin: 20px;
   height: 300px;
   background-color: #f2f2f2;
-/*  border: #66cccc 1px solid;*/
 }
 
 .panel-default > .panel-heading {
