--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,6 +66,10 @@ nav{
   margin: 10px;
 }
 
+.aboutme {
+  padding-bottom: 30px;
+}
+
 .desc {
   /*border: black 1px solid;*/
 }
@@ -80,7 +84,7 @@ nav{
   background-color: #f2f2f2;
 }
 
-.panel-default > .panel-heading {
+.panel-default {
   border: #66cccc 1px solid;
 }
 
