--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,11 +80,15 @@ nav{
 
 .project{
   padding: 20px;
-  height: 300px;
+  height: 100%;
   background-color: #f2f2f2;
 }
 
-.panel-default > .panel-heading {
+/*.panel-default > .panel-heading {
+  border: #66cccc 1px solid;
+}
+*/
+.panel-default {
   border: #66cccc 1px solid;
 }
 
