resizing profile pic and changing border radius

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,10 @@ nav{
 
 .profilepic {
   height: 300px;
+  width: 300px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  border-radius: 50px;
 }
 
 .screenshot {
