--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,11 +34,11 @@ nav{
   transform: translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
 }
-.navigation-bar a:hover{
+/*.navigation-bar a:hover{
   -webkit-transform: scale(1.05);
   -ms-transform: scale(1.05);
   transform: scale(1.05);
-}
+}*/
 .navigation-bar a:link{
   text-decoration: none;
   }
