--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,7 @@ body {
 
 nav{
   background-color: #66cccc;
-  text-align: center;
+  text-align: right;
   position: fixed;
   width: 100%;
   height: 40px;
@@ -17,8 +17,8 @@ nav{
 
 .navigation-bar a{
   font-size: 20px;
-  padding: 10px;
-  font-weight: 500;
+  padding: 5px;
+/*  font-weight: 500;*/
   text-shadow: none;
   text-align: right;
 }
