--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-  padding-top: 50px;
+  padding-top: 40px;
 }
 
 nav{
@@ -126,6 +126,7 @@ nav{
   margin: 10px;
   padding: 10px;
   text-align: center;
+  color: #7f8c8d;
 }
 
 .social {
@@ -133,11 +134,15 @@ nav{
   padding: 10px;
 }
 
+.social-sm {
+  margin-right: 30px;
+} 
+
 .fa {
   color: #7f8c8d;
 }
 
-.fa :hover {
+.fa a:hover {
   color: #5a6465;
 }
 
