--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,11 +72,11 @@ nav{
 }
 
 #fourth-div {
-  background-image:url(http://i.imgur.com/pksU2Cwl.jpg);
+  background-image:url(http://i.imgur.com/bIv1skj.jpg);
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
-  height: 200px;
+  height: 400px;
 }
 
 
