changing the image for the second div

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,7 +57,7 @@ nav{
 }
 
 #second-div {
-  background-image:url(http://i.imgur.com/pksU2Cwl.jpg);
+  background-image:url(http://i.imgur.com/s6lzkWd.jpg);
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
