adding the click-here class to the h4 tag

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,10 +15,14 @@ nav{
   z-index: 10;
 }
 
+.click-here {
+  background-color: red;
+}
+
 .click-here:hover {
   background-color: #66cccc;
-  height: 20px;
-  width: 100%;
+/*  height: 20px;
+  width: 100%;*/
 }
 
 .navigation-bar a{
