--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,11 @@ nav{
   background-color: #66cccc;
 }
 
+a:link {text-decoration:none;}    /* unvisited link */
+a:visited {text-decoration:none;} /* visited link */
+a:hover {text-decoration:none;}   /* mouse over link */
+a:active {text-decoration:none;}  /* selected link */
+
 .navigation-bar a{
   font-size: 20px;
   padding: 5px;
