--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,10 @@ nav{
   background-color: #66cccc;
 }
 
-a:link {text-decoration:none;}    /* unvisited link */
+a:link {
+  text-decoration:none;
+  color: #000;
+  }    /* unvisited link */
 a:visited {text-decoration:none;} /* visited link */
 a:hover {text-decoration:none;}   /* mouse over link */
 a:active {text-decoration:none;}  /* selected link */
