--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,7 +73,7 @@ a:active {text-decoration:none;}  /* selected link */
   background-size: cover;
   background-attachment: scroll;
   width: 100%;
-  height: 600px;
+  height: 100%;
 }
 
 #second-div {
