changed the link hover color and the project link opens a new window

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,7 +65,7 @@ a:active {text-decoration:none;}  /* selected link */
 
 .navigation-bar a:hover,
 .navigation-bar a:focus{
-  color: #ee8e85; 
+  color: #B866CC; 
   outline: none;
 }
 
