--- a/public/css/style.css
+++ b/public/css/style.css
@@ -171,15 +171,9 @@ a:active {text-decoration:none;}  /* selected link */
 .contactme {
   margin: 10px;
   padding: 10px;
-  text-align: center;
+  padding-right: 30px;
+  text-align: right;
 }
-
-/*.contactme-lg {
-  margin: 10px;
-  padding: 10px;
-  text-align: center;
-  color: #66cccc;
-}*/
 
 .social {
   margin-right: 30px;
