--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 .container {
-  padding-top: 40px;
+  padding: 40px 50px;
 }
 
 nav{
@@ -172,7 +172,6 @@ a:active {text-decoration:none;}  /* selected link */
   margin: 10px;
   padding: 10px;
   padding-right: 30px;
-  text-align: right;
 }
 
 .social {
