--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 body {
   background-color: #f2f2f2;
+  padding-top: 40px;
 /*  font-family: 'Crushed', cursive;   
 */  /*font-family: 'Noto Serif', serif;*/
 }
-
 
 nav{
   background-color: #66cccc;
@@ -11,6 +11,7 @@ nav{
   position: fixed;
   width: 100%;
   height: 40px;
+  padding-top: -40px;
   z-index: 10;
 }
 
