--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,7 +104,7 @@ a:active {text-decoration:none;}  /* selected link */
   background-size: cover;
   background-attachment: fixed;
   width: 100%;
-  height: 400px;
+  height: 500px;
 }
 
 
@@ -192,6 +192,10 @@ a:active {text-decoration:none;}  /* selected link */
 
 .fa:hover {
   color: #5a6465;
+}
+
+.resume {
+  font-weight: 100px;
 }
 
 .resume:hover {
