--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,16 +16,15 @@ nav{
 .navigation-bar a{
   font-size: 20px;
   padding: 5px;
-/*  font-weight: 500;*/
   text-shadow: none;
 }
 
 .nav-left {
-  text-align: left;
+  float: left;
 }
 
 .nav-right {
-  text-align: right;
+  float: right;
 }
 
 .navigation-bar a{
@@ -114,6 +113,14 @@ a:active {text-decoration:none;}  /* selected link */
   height: 500px;
 }
 
+.profilepic-sm {
+  background-image: url(http://i.imgur.com/fsM4ywVs.jpg?1);
+  height: 50px;
+  width: 50px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  border-radius: 25px;
+}
 
 .profilepic {
   height: 300px;
