--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,6 +115,13 @@ a:active {text-decoration:none;}  /* selected link */
   height: 500px;
 }
 
+#fifth-div {
+  background-size: cover;
+  background-attachment: scroll;
+  width: 100%;
+  height: 200px;
+}
+
 .profilepic-sm {
   height: 30px;
   width: 30px;
@@ -153,7 +160,7 @@ a:active {text-decoration:none;}  /* selected link */
 }
 
 .aboutme {
-  padding: 0 30px;
+  padding: 30px 0;
 }
 
 .desc {
