--- a/public/css/style.css
+++ b/public/css/style.css
@@ -118,8 +118,11 @@ a:active {text-decoration:none;}  /* selected link */
 #fifth-div {
   background-size: cover;
   background-attachment: scroll;
+  background-color: #5a6465;
+  color: #f2f2f2;
   width: 100%;
-  height: 200px;
+  height: 100px;
+  text-align: center;
 }
 
 .profilepic-sm {
