--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,6 +207,13 @@ a:active {text-decoration:none;}  /* selected link */
   margin-right: 30px;
 } 
 
+.view-code {
+  font-size: 20px;
+  float: right;
+  padding-top: 10px;
+  margin-right: 30px;
+}
+
 .icon-lg {
   color: #66cccc;
 }
