--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,6 +218,10 @@ a:active {text-decoration:none;}  /* selected link */
   color: #66cccc;
 }
 
+.resume {
+  color: #66cccc;
+}
+
 .fa:hover {
   color: #5a6465;
 }
@@ -227,7 +231,7 @@ a:active {text-decoration:none;}  /* selected link */
 }
 
 a.social.resume {
-font-size: 30px;
+font-size: 20px;
 }
 
 .project-title {
