--- a/public/css/style.css
+++ b/public/css/style.css
@@ -220,6 +220,10 @@ a:active {text-decoration:none;}  /* selected link */
 
 .resume {
   color: #66cccc;
+  background-color: #f2f2f2;
+  border-radius: 7px;
+  padding: 10px 15px;
+  margin-right: 40px;
 }
 
 .fa:hover {
